# cloud-agentic-skill

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release-docker-publish.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: api_keys.py  auth.py  mcp.py  skills.py
app/core/: __init__.py  config.py  interfaces.py  models.py
app/mcp/: adapter.py  router.py
app/providers/: embedding.py
app/repositories/: elasticsearch.py
app/services/: api_keys.py  auth.py  orchestrator.py
dashboard/: api_client.py  app.py
dashboard/tabs/: __init__.py  health.py  logs.py  security.py  studio.py  users.py
docs/: access-management.md  architecture.md  data-schema.md  deployment-guide.md  design-patterns.md  implementation-guide.md  onboarding.md
scripts/: seed_data.py
tests/: fakes.py  test_api.py  test_auth.py  test_mcp.py  test_orchestrator.py
